--- a/src/main/resources/assets/cloudmusic/lang/en_us.json
+++ b/src/main/resources/assets/cloudmusic/lang/en_us.json
@@ -1,4 +1,12 @@
 {
+    "cloudmusic.info.config.reset": "§c§l重载配置时会重载缓存目录, 请耐心等待 !",
+    "cloudmusic.info.config.complete": "§c§l重载完成 !!! 以下为新配置",
+    "cloudmusic.info.config.cookie": "Cookie 用户: %d",
+    "cloudmusic.info.config.play.url": "是否直接播放, 不下载缓存音乐文件?: %d",
+    "cloudmusic.info.config.volume": "当前音量 (增益值 -80 至 6 的百分比): %d",
+    "cloudmusic.info.config.cache": "缓存使用: %d §r最大缓存: %d §r超出时清除空间: %d",
+    "cloudmusic.info.config.cache.path": "缓存路径: %d",
+    "cloudmusic.info.not.cookie": "§c§l无效的 Cookie, 请设置 Cookie 后重试",
     "cloudmusic.info.page.count": "§c§l===========%d页§c§l===========",
     "cloudmusic.info.volume": "当前音量: %d",
     "cloudmusic.info.music.artist": "%d",
