add info, add playing all

--- a/src/main/resources/assets/cloudmusic/lang/en_us.json
+++ b/src/main/resources/assets/cloudmusic/lang/en_us.json
@@ -25,9 +25,32 @@
     "cloudmusic.info.artist.album": "专辑数: %d",
     "cloudmusic.info.artist.id": "id: %d",
 
+    "cloudmusic.info.page.artist.album": "%d 的所有专辑",
+    "cloudmusic.info.page.user.playlist": "%d 的所有歌单",
+    "cloudmusic.info.page.recommend.playlist": "%d 的每日推荐歌单",
+    "cloudmusic.info.page.sublist.album": "%d 的所有专辑收藏",
+    "cloudmusic.info.page.sublist.artist": "%d 的所有歌手收藏",
+    "cloudmusic.info.page.search": "%d 的搜索结果",
+    "cloudmusic.info.page.playing.all": "播放列表",
+
+    "cloudmusic.info.command.recommend.music": "播放每日推荐音乐",
+    "cloudmusic.info.command.fm": "进入私人 fm 模式播放",
+    "cloudmusic.info.command.like": "播放 %d 喜欢的音乐",
+    "cloudmusic.info.command.album.subscribe": "收藏专辑 %d",
+    "cloudmusic.info.command.album.unsubscribe": "取消收藏专辑 %d",
+    "cloudmusic.info.command.album.play": "播放 %d 专辑",
+    "cloudmusic.info.command.artist.subscribe": "收藏歌手 %d",
+    "cloudmusic.info.command.artist.unsubscribe": "取消收藏歌手 %d",
+    "cloudmusic.info.command.artist.top.play": "播放 %d 热门 50 首",
+    "cloudmusic.info.command.playlist.subscribe": "收藏歌单 %d",
+    "cloudmusic.info.command.playlist.unsubscribe": "取消收藏歌单 %d",
+    "cloudmusic.info.command.playlist.play": "播放 %d 歌单",
+    "cloudmusic.info.command.music.like": "红心 %d",
+    "cloudmusic.info.command.music.unlike": "取消红心 %d",
+    "cloudmusic.info.command.music.play": "播放 %d",
+
     "cloudmusic.options.play": "[播放]",
     "cloudmusic.options.play.top50": "[热门50首]",
-    "cloudmusic.options.music": "[音乐]",
     "cloudmusic.options.album": "[专辑]",
     "cloudmusic.options.like": "[红心]",
     "cloudmusic.options.unlike": "[取消红心]",
