add help, add README.md

--- a/src/main/resources/assets/cloudmusic/lang/en_us.json
+++ b/src/main/resources/assets/cloudmusic/lang/en_us.json
@@ -1,4 +1,66 @@
 {
+    "cloudmusic.help": "配置文件在游戏目录 config/cloud_music_config",
+
+    "cloudmusic.help.music": "获取音乐 /cloudmusic music [id]",
+    "cloudmusic.help.music.play": "播放音乐 /cloudmusic music play [id]",
+    "cloudmusic.help.music.like": "红心音乐 /cloudmusic music like [id]",
+    "cloudmusic.help.music.unlike": "取消红心音乐 /cloudmusic music unlike [id]",
+
+    "cloudmusic.help.playlist": "获取歌单 /cloudmusic playlist [id]",
+    "cloudmusic.help.playlist.play": "播放歌单 /cloudmusic music playlist [id]",
+    "cloudmusic.help.playlist.subscribe": "收藏歌单 /cloudmusic playlist subscribe [id]",
+    "cloudmusic.help.playlist.unsubscribe": "取消收藏歌单 /cloudmusic playlist unsubscribe [id]",
+    "cloudmusic.help.playlist.add": "歌单添加音乐 /cloudmusic playlist add [id] [音乐 id]",
+    "cloudmusic.help.playlist.del": "歌单删除音乐 /cloudmusic playlist del [id] [音乐 id]",
+
+    "cloudmusic.help.artist": "获取歌手 /cloudmusic artist [id]",
+    "cloudmusic.help.artist.top": "播放歌手热门 50 首 /cloudmusic artist top [id]",
+    "cloudmusic.help.artist.album": "查看歌手所有专辑 /cloudmusic artist album [id]",
+    "cloudmusic.help.artist.subscribe": "收藏歌手 /cloudmusic artist subscribe [id]",
+    "cloudmusic.help.artist.unsubscribe": "取消收藏歌手 /cloudmusic artist unsubscribe [id]",
+
+    "cloudmusic.help.album": "获取专辑 /cloudmusic album [id]",
+    "cloudmusic.help.album.play": "播放专辑 /cloudmusic album play [id]",
+    "cloudmusic.help.album.subscribe": "收藏专辑 /cloudmusic album subscribe [id]",
+    "cloudmusic.help.album.unsubscribe": "取消收藏专辑 /cloudmusic album unsubscribe [id]",
+
+    "cloudmusic.help.user": "获取用户 /cloudmusic user [id]",
+    "cloudmusic.help.user.playlist": "获取用户歌单 /cloudmusic user playlist [id]",
+    "cloudmusic.help.user.like": "获取用户喜欢的音乐 /cloudmusic user like [id]",
+
+    "cloudmusic.help.my": "获取 cookie 用户 /cloudmusic my",
+    "cloudmusic.help.my.fm": "私人 fm /cloudmusic my fm",
+    "cloudmusic.help.my.like": "我喜欢的音乐 /cloudmusic my like",
+    "cloudmusic.help.my.playlist": "获取我的歌单 /cloudmusic my playlist",
+    "cloudmusic.help.my.recommend.music": "每日推荐音乐 /cloudmusic my recommend music",
+    "cloudmusic.help.my.recommend.playlist": "每日推荐歌单 /cloudmusic my recommend playlist",
+    "cloudmusic.help.my.sublist.album": "我收藏的专辑 /cloudmusic my sublist album",
+    "cloudmusic.help.my.sublist.artist": "我收藏的歌手 /cloudmusic my sublist artist",
+
+    "cloudmusic.help.search.music": "搜索音乐 /cloudmusic search music [key]",
+    "cloudmusic.help.search.album": "搜索专辑 /cloudmusic search album [key]",
+    "cloudmusic.help.search.artist": "搜索歌手 /cloudmusic search artist [key]",
+    "cloudmusic.help.search.playlist": "搜索歌单 /cloudmusic search playlist [key]",
+
+    "cloudmusic.help.volume": "查看音量 /cloudmusic volume",
+    "cloudmusic.help.volume.volume": "调整音量 (0-100) /cloudmusic volume [volume]",
+
+    "cloudmusic.help.page.up": "上一页 /cloudmusic page up",
+    "cloudmusic.help.page.down": "下一页 /cloudmusic page down",
+    "cloudmusic.help.page.to": "跳转至 /cloudmusic page to [page]",
+
+    "cloudmusic.help.playing": "查看正在播放的音乐 /cloudmusic playing",
+    "cloudmusic.help.playing.all": "查看正在播放的音乐列表 /cloudmusic playing all",
+
+    "cloudmusic.help.stop": "暂停播放 /cloudmusic stop",
+    "cloudmusic.help.continue": "继续播放 /cloudmusic continue",
+    "cloudmusic.help.up": "上一首 /cloudmusic up",
+    "cloudmusic.help.down": "下一首 /cloudmusic down",
+    "cloudmusic.help.to": "播放跳转至 /cloudmusic to [musicIndex]",
+    "cloudmusic.help.exit": "退出播放 (无法继续播放) /cloudmusic exit",
+    "cloudmusic.help.reset": "重载配置 /cloudmusic reset",
+    "cloudmusic.help.cloudmusic": "显示本帮助 /cloudmusic",
+
     "cloudmusic.info.config.reset": "§c§l重载配置时会重载缓存目录, 请耐心等待 !",
     "cloudmusic.info.config.complete": "§c§l重载完成 !!! 以下为新配置",
     "cloudmusic.info.config.cookie": "Cookie 用户: %d",
@@ -12,10 +74,10 @@
     "cloudmusic.info.music.artist": "%d",
     "cloudmusic.info.music.album": "专辑: %d",
     "cloudmusic.info.music.id": "id: %d",
-    "cloudmusic.info.music.platlist.creator": "创建者: %d",
-    "cloudmusic.info.music.platlist.tags": "标签: %d",
-    "cloudmusic.info.music.platlist.count": "单曲数: %d 播放数: %d",
-    "cloudmusic.info.music.platlist.id": "id: %d",
+    "cloudmusic.info.music.playlist.creator": "创建者: %d",
+    "cloudmusic.info.music.playlist.tags": "标签: %d",
+    "cloudmusic.info.music.playlist.count": "单曲数: %d 播放数: %d",
+    "cloudmusic.info.music.playlist.id": "id: %d",
     "cloudmusic.info.album.id": "id: %d",
     "cloudmusic.info.album.size": "单曲数: %d",
     "cloudmusic.info.user.level": "等级: %d",
@@ -32,6 +94,7 @@
     "cloudmusic.info.page.sublist.artist": "%d 的所有歌手收藏",
     "cloudmusic.info.page.search": "%d 的搜索结果",
     "cloudmusic.info.page.playing.all": "播放列表",
+    "cloudmusic.info.page.help": "CloudMusic 帮助",
 
     "cloudmusic.info.command.recommend.music": "播放每日推荐音乐",
     "cloudmusic.info.command.fm": "进入私人 fm 模式播放",
