--- a/src/main/resources/assets/cloudmusic/lang/en_us.json
+++ b/src/main/resources/assets/cloudmusic/lang/en_us.json
@@ -47,6 +47,7 @@
     "cloudmusic.help.login.captcha": "发送手机验证码 /cloudmusic login captcha [手机号]",
     "cloudmusic.help.login.captcha.login": "手机验证码登录 /cloudmusic login captcha [手机号] [验证码]",
     "cloudmusic.help.login.captcha.phone": "手机密码登录 /cloudmusic login phone [手机号] [密码]",
+    "cloudmusic.help.login.qr": "二维码登录 /cloudmusic login qr",
 
     "cloudmusic.help.volume": "查看音量 /cloudmusic volume",
     "cloudmusic.help.volume.volume": "调整音量 (0-100) /cloudmusic volume [volume]",
@@ -142,5 +143,7 @@
     "cloudmusic.exception.login.501": "登录失败, 未注册",
     "cloudmusic.exception.login.502": "登录失败, 密码错误",
     "cloudmusic.exception.login.503": "登录失败, 验证码错误",
-    "cloudmusic.exception.login.err.code": "登录失败, 未知错误: %d"
+    "cloudmusic.exception.login.err.code": "登录失败, 未知错误: %d",
+    "cloudmusic.exception.login.qr.code": "二维码过期...",
+    "cloudmusic.exception.login.qr.code.time.out": "等待扫码超时..."
 }
