--- a/src/main/resources/assets/cloudmusic/lang/en_us.json
+++ b/src/main/resources/assets/cloudmusic/lang/en_us.json
@@ -1,149 +1,131 @@
 {
-    "cloudmusic.help": "配置文件在游戏目录 config/cloud_music_config",
-
-    "cloudmusic.help.music": "获取音乐 /cloudmusic music [id]",
-    "cloudmusic.help.music.play": "播放音乐 /cloudmusic music play [id]",
-    "cloudmusic.help.music.like": "红心音乐 /cloudmusic music like [id]",
-    "cloudmusic.help.music.unlike": "取消红心音乐 /cloudmusic music unlike [id]",
-
-    "cloudmusic.help.playlist": "获取歌单 /cloudmusic playlist [id]",
-    "cloudmusic.help.playlist.play": "播放歌单 /cloudmusic music playlist [id]",
-    "cloudmusic.help.playlist.subscribe": "收藏歌单 /cloudmusic playlist subscribe [id]",
-    "cloudmusic.help.playlist.unsubscribe": "取消收藏歌单 /cloudmusic playlist unsubscribe [id]",
-    "cloudmusic.help.playlist.add": "歌单添加音乐 /cloudmusic playlist add [id] [音乐 id]",
-    "cloudmusic.help.playlist.del": "歌单删除音乐 /cloudmusic playlist del [id] [音乐 id]",
-
-    "cloudmusic.help.artist": "获取歌手 /cloudmusic artist [id]",
-    "cloudmusic.help.artist.top": "播放歌手热门 50 首 /cloudmusic artist top [id]",
-    "cloudmusic.help.artist.album": "查看歌手所有专辑 /cloudmusic artist album [id]",
-    "cloudmusic.help.artist.subscribe": "收藏歌手 /cloudmusic artist subscribe [id]",
-    "cloudmusic.help.artist.unsubscribe": "取消收藏歌手 /cloudmusic artist unsubscribe [id]",
-
-    "cloudmusic.help.album": "获取专辑 /cloudmusic album [id]",
-    "cloudmusic.help.album.play": "播放专辑 /cloudmusic album play [id]",
-    "cloudmusic.help.album.subscribe": "收藏专辑 /cloudmusic album subscribe [id]",
-    "cloudmusic.help.album.unsubscribe": "取消收藏专辑 /cloudmusic album unsubscribe [id]",
-
-    "cloudmusic.help.user": "获取用户 /cloudmusic user [id]",
-    "cloudmusic.help.user.playlist": "获取用户歌单 /cloudmusic user playlist [id]",
-    "cloudmusic.help.user.like": "获取用户喜欢的音乐 /cloudmusic user like [id]",
-
-    "cloudmusic.help.my": "获取 cookie 用户 /cloudmusic my",
-    "cloudmusic.help.my.fm": "私人 fm /cloudmusic my fm",
-    "cloudmusic.help.my.like": "我喜欢的音乐 /cloudmusic my like",
-    "cloudmusic.help.my.playlist": "获取我的歌单 /cloudmusic my playlist",
-    "cloudmusic.help.my.recommend.music": "每日推荐音乐 /cloudmusic my recommend music",
-    "cloudmusic.help.my.recommend.playlist": "每日推荐歌单 /cloudmusic my recommend playlist",
-    "cloudmusic.help.my.sublist.album": "我收藏的专辑 /cloudmusic my sublist album",
-    "cloudmusic.help.my.sublist.artist": "我收藏的歌手 /cloudmusic my sublist artist",
-
-    "cloudmusic.help.search.music": "搜索音乐 /cloudmusic search music [key]",
-    "cloudmusic.help.search.album": "搜索专辑 /cloudmusic search album [key]",
-    "cloudmusic.help.search.artist": "搜索歌手 /cloudmusic search artist [key]",
-    "cloudmusic.help.search.playlist": "搜索歌单 /cloudmusic search playlist [key]",
-
-    "cloudmusic.help.login.email": "邮箱登录 /cloudmusic login email [邮箱] [密码]",
-    "cloudmusic.help.login.country.code": "设置手机号国家码 /cloudmusic login country [国家码]",
-    "cloudmusic.help.login.captcha": "发送手机验证码 /cloudmusic login captcha [手机号]",
-    "cloudmusic.help.login.captcha.login": "手机验证码登录 /cloudmusic login captcha [手机号] [验证码]",
-    "cloudmusic.help.login.captcha.phone": "手机密码登录 /cloudmusic login phone [手机号] [密码]",
-    "cloudmusic.help.login.qr": "二维码登录 /cloudmusic login qr",
-
-    "cloudmusic.help.volume": "查看音量 /cloudmusic volume",
-    "cloudmusic.help.volume.volume": "调整音量 (0-100) /cloudmusic volume [volume]",
-
-    "cloudmusic.help.page.up": "上一页 /cloudmusic page up",
-    "cloudmusic.help.page.down": "下一页 /cloudmusic page down",
-    "cloudmusic.help.page.to": "跳转至 /cloudmusic page to [page]",
-
-    "cloudmusic.help.playing": "查看正在播放的音乐 /cloudmusic playing",
-    "cloudmusic.help.playing.all": "查看正在播放的音乐列表 /cloudmusic playing all",
-
-    "cloudmusic.help.stop": "暂停播放 /cloudmusic stop",
-    "cloudmusic.help.continue": "继续播放 /cloudmusic continue",
-    "cloudmusic.help.up": "上一首 /cloudmusic up",
-    "cloudmusic.help.down": "下一首 /cloudmusic down",
-    "cloudmusic.help.to": "播放跳转至 /cloudmusic to [musicIndex]",
-    "cloudmusic.help.exit": "退出播放 (无法继续播放) /cloudmusic exit",
-    "cloudmusic.help.reset": "重载配置 /cloudmusic reset",
-    "cloudmusic.help.cloudmusic": "显示本帮助 /cloudmusic",
-
-    "cloudmusic.info.config.reset": "§c§l重载配置时会重载缓存目录, 请耐心等待 !",
-    "cloudmusic.info.config.complete": "§c§l重载完成 !!! 以下为新配置",
-    "cloudmusic.info.config.cookie": "Cookie 用户: %d",
-    "cloudmusic.info.config.play.url": "是否直接播放, 不下载缓存音乐文件?: %d",
-    "cloudmusic.info.config.volume": "当前音量 (增益值 -80 至 6 的百分比): %d",
-    "cloudmusic.info.config.cache": "缓存使用: %d §r最大缓存: %d §r超出时清除空间: %d",
-    "cloudmusic.info.config.cache.path": "缓存路径: %d",
-    "cloudmusic.info.not.cookie": "§c§l无效的 Cookie, 请设置 Cookie 后重试",
-    "cloudmusic.info.page.count": "§c§l===========%d页§c§l===========",
-    "cloudmusic.info.volume": "当前音量: %d",
-    "cloudmusic.info.music.artist": "%d",
-    "cloudmusic.info.music.album": "专辑: %d",
-    "cloudmusic.info.music.id": "id: %d",
-    "cloudmusic.info.music.playlist.creator": "创建者: %d",
-    "cloudmusic.info.music.playlist.tags": "标签: %d",
-    "cloudmusic.info.music.playlist.count": "单曲数: %d 播放数: %d",
-    "cloudmusic.info.music.playlist.id": "id: %d",
-    "cloudmusic.info.album.id": "id: %d",
-    "cloudmusic.info.album.size": "单曲数: %d",
-    "cloudmusic.info.user.level": "等级: %d",
-    "cloudmusic.info.user.vip": "会员: %d",
-    "cloudmusic.info.user.id": "id: %d",
-    "cloudmusic.info.artist.music": "单曲数: %d",
-    "cloudmusic.info.artist.album": "专辑数: %d",
-    "cloudmusic.info.artist.id": "id: %d",
-
-    "cloudmusic.info.page.artist.album": "%d 的所有专辑",
-    "cloudmusic.info.page.user.playlist": "%d 的所有歌单",
-    "cloudmusic.info.page.recommend.playlist": "%d 的每日推荐歌单",
-    "cloudmusic.info.page.sublist.album": "%d 的所有专辑收藏",
-    "cloudmusic.info.page.sublist.artist": "%d 的所有歌手收藏",
-    "cloudmusic.info.page.search": "%d 的搜索结果",
-    "cloudmusic.info.page.playing.all": "播放列表",
-    "cloudmusic.info.page.help": "CloudMusic 帮助",
-
-    "cloudmusic.info.command.recommend.music": "播放每日推荐音乐",
-    "cloudmusic.info.command.fm": "进入私人 fm 模式播放",
-    "cloudmusic.info.command.like": "播放 %d 喜欢的音乐",
-    "cloudmusic.info.command.album.subscribe": "收藏专辑 %d",
-    "cloudmusic.info.command.album.unsubscribe": "取消收藏专辑 %d",
-    "cloudmusic.info.command.album.play": "播放 %d 专辑",
-    "cloudmusic.info.command.artist.subscribe": "收藏歌手 %d",
-    "cloudmusic.info.command.artist.unsubscribe": "取消收藏歌手 %d",
-    "cloudmusic.info.command.artist.top.play": "播放 %d 热门 50 首",
-    "cloudmusic.info.command.playlist.subscribe": "收藏歌单 %d",
-    "cloudmusic.info.command.playlist.unsubscribe": "取消收藏歌单 %d",
-    "cloudmusic.info.command.playlist.play": "播放 %d 歌单",
-    "cloudmusic.info.command.music.like": "红心 %d",
-    "cloudmusic.info.command.music.unlike": "取消红心 %d",
-    "cloudmusic.info.command.music.play": "播放 %d",
-    "cloudmusic.info.command.login": "成功登录至 %d",
-    "cloudmusic.info.command.login.sendcaptcha": "成功向手机号发送验证码...",
-    "cloudmusic.info.command.country.code": "设置手机号国家码为 %d...",
-
-    "cloudmusic.options.play": "[播放]",
-    "cloudmusic.options.play.top50": "[热门50首]",
-    "cloudmusic.options.album": "[专辑]",
-    "cloudmusic.options.like": "[红心]",
-    "cloudmusic.options.unlike": "[取消红心]",
-    "cloudmusic.options.subscribe": "[收藏]",
-    "cloudmusic.options.unsubscribe": "[取消收藏]",
-    "cloudmusic.options.page.up": "[上一页]",
-    "cloudmusic.options.page.down": "[下一页]",
-    "cloudmusic.options.page.to": "[跳转至...]",
-
-    "cloudmusic.exception.music.id": "§c§l找不到音乐, 请检查音乐 id",
-    "cloudmusic.exception.album.id": "§c§l找不到专辑, 请检查专辑 id",
-    "cloudmusic.exception.user.id": "§c§l无法获取用户, 请检查用户 id",
-    "cloudmusic.exception.cookie": "§c§l无效的 cookie, 请检查 cookie 有效性 (尝试重新登录)",
-    "cloudmusic.exception.cookie.use": "§c§l现在还没有登录, 无法执行该操作, 请检查 cookie 有效性 (尝试重新登录)",
-
-    "cloudmusic.exception.login.400": "登录失败, 手机号格式错误",
-    "cloudmusic.exception.login.501": "登录失败, 未注册",
-    "cloudmusic.exception.login.502": "登录失败, 密码错误",
-    "cloudmusic.exception.login.503": "登录失败, 验证码错误",
-    "cloudmusic.exception.login.err.code": "登录失败, 未知错误: %d",
-    "cloudmusic.exception.login.qr.code": "二维码过期...",
-    "cloudmusic.exception.login.qr.code.time.out": "等待扫码超时..."
+  "cloudmusic.help": "The configuration file is in the game directory config/cloud_music_config",
+  "cloudmusic.help.music": "Get music /cloudmusic music [id]",
+  "cloudmusic.help.music.play": "Play music /cloudmusic music play [id]",
+  "cloudmusic.help.music.like": "Hearts music /cloudmusic music like [id]",
+  "cloudmusic.help.music.unlike": "Unlike /cloudmusic music unlike [id]",
+  "cloudmusic.help.playlist": "Get song list /cloudmusic playlist [id]",
+  "cloudmusic.help.playlist.play": "Play song list /cloudmusic music playlist [id]",
+  "cloudmusic.help.playlist.subscribe": "Bookmark /cloudmusic playlist subscribe [id]",
+  "cloudmusic.help.playlist.unsubscribe": "Unsubscribe /cloudmusic playlist unsubscribe [id]",
+  "cloudmusic.help.playlist.add": "add music to playlist /cloudmusic playlist add [id] [music id]",
+  "cloudmusic.help.playlist.del": "Delete music from playlist /cloudmusic playlist del [id] [music id]",
+  "cloudmusic.help.artist": "Get artist /cloudmusic artist [id]",
+  "cloudmusic.help.artist.top": "Play top 50 songs by artist /cloudmusic artist top [id]",
+  "cloudmusic.help.artist.album": "See all albums by the artist /cloudmusic artist album [id]",
+  "cloudmusic.help.artist.subscribe": "Favorite artists /cloudmusic artist subscribe [id]",
+  "cloudmusic.help.artist.unsubscribe": "Unsubscribe /cloudmusic artist unsubscribe [id]",
+  "cloudmusic.help.album": "Get album /cloudmusic album [id]",
+  "cloudmusic.help.album.play": "Play album /cloudmusic album play [id]",
+  "cloudmusic.help.album.subscribe": "Bookmark album /cloudmusic album subscribe [id]",
+  "cloudmusic.help.album.unsubscribe": "Unsubscribe from the album /cloudmusic album unsubscribe [id]",
+  "cloudmusic.help.user": "Get user /cloudmusic user [id]",
+  "cloudmusic.help.user.playlist": "Get user playlist /cloudmusic user playlist [id]",
+  "cloudmusic.help.user.like": "Get user's favorite music /cloudmusic user like [id]",
+  "cloudmusic.help.my": "Get cookie user /cloudmusic my",
+  "cloudmusic.help.my.fm": "private fm /cloudmusic my fm",
+  "cloudmusic.help.my.like": "My favorite music /cloudmusic my like",
+  "cloudmusic.help.my.playlist": "Get my playlist /cloudmusic my playlist",
+  "cloudmusic.help.my.recommend.music": "Recommended music of the day /cloudmusic my recommend music",
+  "cloudmusic.help.my.recommend.playlist": "Daily recommended playlists /cloudmusic my recommend playlist",
+  "cloudmusic.help.my.sublist.album": "My favorite albums /cloudmusic my sublist album",
+  "cloudmusic.help.my.sublist.artist": "My favorite artists /cloudmusic my sublist artist",
+  "cloudmusic.help.search.music": "Search music /cloudmusic search music [key]",
+  "cloudmusic.help.search.album": "Search albums /cloudmusic search album [key]",
+  "cloudmusic.help.search.artist": "Search artists /cloudmusic search artist [key]",
+  "cloudmusic.help.search.playlist": "Search song list /cloudmusic search playlist [key]",
+  "cloudmusic.help.login.email": "E-mail login /cloudmusic login email [email] [password]",
+  "cloudmusic.help.login.country.code": "Set cell phone number country code /cloudmusic login country [country code]",
+  "cloudmusic.help.login.captcha": "Send mobile verification code /cloudmusic login captcha [mobile number]",
+  "cloudmusic.help.login.captcha.login": "Cell phone verification code login /cloudmusic login captcha [cell phone number] [verification code]",
+  "cloudmusic.help.login.captcha.phone": "Phone password login /cloudmusic login phone [phone number] [password]",
+  "cloudmusic.help.login.qr": "QR code login /cloudmusic login qr",
+  "cloudmusic.help.volume": "View volume /cloudmusic volume",
+  "cloudmusic.help.volume.volume": "Adjust volume (0-100) /cloudmusic volume [volume]",
+  "cloudmusic.help.page.up": "Previous /cloudmusic page up",
+  "cloudmusic.help.page.down": "Next /cloudmusic page down",
+  "cloudmusic.help.page.to": "Jump to /cloudmusic page to [page]",
+  "cloudmusic.help.playing": "View playing music /cloudmusic playing",
+  "cloudmusic.help.playing.all": "View the list of playing music /cloudmusic playing all",
+  "cloudmusic.help.stop": "Stop playing /cloudmusic stop",
+  "cloudmusic.help.continue": "Continue playing /cloudmusic continue",
+  "cloudmusic.help.up": "Previous /cloudmusic up",
+  "cloudmusic.help.down": "Next /cloudmusic down",
+  "cloudmusic.help.to": "Play skip to /cloudmusic to [musicIndex]",
+  "cloudmusic.help.exit": "Exit playback (can't continue) /cloudmusic exit",
+  "cloudmusic.help.reset": "Reload configuration /cloudmusic reset",
+  "cloudmusic.help.cloudmusic": "Show this help /cloudmusic",
+  "cloudmusic.info.config.reset": "§C§l reloads the configuration and reloads the cache directory, please be patient !",
+  "cloudmusic.info.config.complete": "§The reload is complete !!! Here is the new configuration",
+  "cloudmusic.info.config.cookie": "Cookie user: %d",
+  "cloudmusic.info.config.play.url": "Do you want to play directly, without downloading cached music files? : %d",
+  "cloudmusic.info.config.volume": "Current volume (percentage of gain value -80 to 6): %d",
+  "cloudmusic.info.config.cache": "Cache usage: %d §rMax cache: %d §rClear space when exceeded: %d",
+  "cloudmusic.info.config.cache.path": "Cache path: %d",
+  "cloudmusic.info.not.cookie": "§c§l Invalid cookies, please set cookies and try again",
+  "cloudmusic.info.page.count": "§c§l===========%d page §c§l===========",
+  "cloudmusic.info.volume": "Current volume: %d",
+  "cloudmusic.info.music.artist": "%d",
+  "cloudmusic.info.music.album": "Album: %d",
+  "cloudmusic.info.music.id": "id: %d",
+  "cloudmusic.info.music.playlist.creator": "Created by: %d",
+  "cloudmusic.info.music.playlist.tags": "Tags: %d",
+  "cloudmusic.info.music.playlist.count": "Number of singles: %d Number of plays: %d",
+  "cloudmusic.info.music.playlist.id": "id: %d",
+  "cloudmusic.info.album.id": "id: %d",
+  "cloudmusic.info.album.size": "Number of singles: %d",
+  "cloudmusic.info.user.level": "Rating: %d",
+  "cloudmusic.info.user.vip": "Members: %d",
+  "cloudmusic.info.user.id": "id: %d",
+  "cloudmusic.info.artist.music": "Number of singles: %d",
+  "cloudmusic.info.artist.album": "Number of albums: %d",
+  "cloudmusic.info.artist.id": "id: %d",
+  "cloudmusic.info.page.artist.album": "All albums by %d",
+  "cloudmusic.info.page.user.playlist": "%d's all songs",
+  "cloudmusic.info.page.recommend.playlist": "%d's daily recommended songs",
+  "cloudmusic.info.page.sublist.album": "%d's all albums in your collection",
+  "cloudmusic.info.page.sublist.artist": "%d's all artists in your collection",
+  "cloudmusic.info.page.search": "Search results for %d",
+  "cloudmusic.info.page.playing.all": "Playlists",
+  "cloudmusic.info.page.help": "CloudMusic Help",
+  "cloudmusic.info.command.recommend.music": "Play daily recommended music",
+  "cloudmusic.info.command.fm": "Play in private fm mode",
+  "cloudmusic.info.command.like": "Play %d favorite music",
+  "cloudmusic.info.command.album.subscribe": "Bookmark albums %d",
+  "cloudmusic.info.command.album.unsubscribe": "Cancel favorite albums %d",
+  "cloudmusic.info.command.album.play": "Play %d Albums",
+  "cloudmusic.info.command.artist.subscribe": "Favorite artists %d",
+  "cloudmusic.info.command.artist.unsubscribe": "Cancel favorite artists %d",
+  "cloudmusic.info.command.artist.top.play": "Play %d Top 50",
+  "cloudmusic.info.command.playlist.subscribe": "Favorite Songs %d",
+  "cloudmusic.info.command.playlist.unsubscribe": "Cancel Favorite Songs %d",
+  "cloudmusic.info.command.playlist.play": "Play %d Song List",
+  "cloudmusic.info.command.music.like": "Hearts %d",
+  "cloudmusic.info.command.music.unlike": "Cancel Hearts %d",
+  "cloudmusic.info.command.music.play": "Play %d",
+  "cloudmusic.info.command.login": "Successfully logged in to %d",
+  "cloudmusic.info.command.login.sendcaptcha": "Successfully sent verification code to cell phone number...",
+  "cloudmusic.info.command.country.code": "Set country code for cell phone number to %d...",
+  "cloudmusic.options.play": "[Play]",
+  "cloudmusic.options.play.top50": "[Top 50 songs]",
+  "cloudmusic.options.album": "[Album]",
+  "cloudmusic.options.like": "[Hearts]",
+  "cloudmusic.options.unlike": "[Cancel Hearts]",
+  "cloudmusic.options.subscribe": "[Favorites]",
+  "cloudmusic.options.unsubscribe": "[uncollect] [uncollect",
+  "cloudmusic.options.page.up": "[Previous] [Next",
+  "cloudmusic.options.page.down": "[next] [next]",
+  "cloudmusic.options.page.to": "[Jump to...]",
+  "cloudmusic.exception.music.id": "§c§l can't find music, please check music id §c§l can't find music, please check music id",
+  "cloudmusic.exception.album.id": "§C§l can't find the album, please check the album id. §C§l can't find the album, please check the album id.",
+  "cloudmusic.exception.user.id": "§C§l can't get user, please check user id. §C§l can't get user, please check user id.",
+  "cloudmusic.exception.cookie": "§C§l Invalid cookie, please check cookie validity (try logging in again)",
+  "cloudmusic.exception.cookie.use": "§C§l not logged in yet, can't do it, check cookie validity (try logging in again)",
+  "cloudmusic.exception.login.400": "Login failed, wrong phone number format",
+  "cloudmusic.exception.login.501": "Login failed, not registered",
+  "cloudmusic.exception.login.502": "Login failed, wrong password",
+  "cloudmusic.exception.login.503": "Failed to login, wrong captcha",
+  "cloudmusic.exception.login.err.code": "Login failed, Unknown error: %d",
+  "cloudmusic.exception.login.qr.code": "QR code expired...",
+  "cloudmusic.exception.login.qr.code.time.out": "Waiting for the code to time out..."
 }
