add lyric, fix playlist translatable bug

--- a/src/main/resources/assets/cloudmusic/lang/en_us.json
+++ b/src/main/resources/assets/cloudmusic/lang/en_us.json
@@ -111,10 +111,10 @@
   "cloudmusic.options.album": "[Album]",
   "cloudmusic.options.like": "[Hearts]",
   "cloudmusic.options.unlike": "[Cancel Hearts]",
-  "cloudmusic.options.subscribe": "[Favorites]",
-  "cloudmusic.options.unsubscribe": "[uncollect] [uncollect",
-  "cloudmusic.options.page.up": "[Previous] [Next",
-  "cloudmusic.options.page.down": "[next] [next]",
+  "cloudmusic.options.subscribe": "[Subscribe]",
+  "cloudmusic.options.unsubscribe": "[Unsubscribe]",
+  "cloudmusic.options.page.up": "[Previous]",
+  "cloudmusic.options.page.down": "[Next]",
   "cloudmusic.options.page.to": "[Jump to...]",
   "cloudmusic.exception.music.id": "§c§l can't find music, please check music id §c§l can't find music, please check music id",
   "cloudmusic.exception.album.id": "§C§l can't find the album, please check the album id. §C§l can't find the album, please check the album id.",
