--- a/src/main/resources/assets/cloudmusic/lang/zh_cn.json
+++ b/src/main/resources/assets/cloudmusic/lang/zh_cn.json
@@ -153,5 +153,7 @@
     "cloudmusic.exception.login.503": "登录失败, 验证码错误",
     "cloudmusic.exception.login.err.code": "登录失败, 未知错误: %d",
     "cloudmusic.exception.login.qr.code": "二维码过期...",
-    "cloudmusic.exception.login.qr.code.time.out": "等待扫码超时..."
+    "cloudmusic.exception.login.qr.code.time.out": "等待扫码超时...",
+    "cloudmusic.exception.http": "网络请求重试超出最大次数 %d 次, 错误: %s",
+    "cloudmusic.exception.http.download": "下载文件重试超出最大次数 %d 次, 错误: %s"
 }
