Optimization page player command name

--- a/src/main/resources/assets/cloudmusic/lang/en_us.json
+++ b/src/main/resources/assets/cloudmusic/lang/en_us.json
@@ -42,15 +42,15 @@
   "cloudmusic.help.login.qr": "QR code login /cloudmusic login qr",
   "cloudmusic.help.volume": "View volume /cloudmusic volume",
   "cloudmusic.help.volume.volume": "Adjust volume (0-100) /cloudmusic volume [volume]",
-  "cloudmusic.help.page.up": "Previous /cloudmusic page up",
-  "cloudmusic.help.page.down": "Next /cloudmusic page down",
+  "cloudmusic.help.page.prev": "Previous /cloudmusic page prev",
+  "cloudmusic.help.page.next": "Next /cloudmusic page next",
   "cloudmusic.help.page.to": "Jump to /cloudmusic page to [page]",
   "cloudmusic.help.playing": "View playing music /cloudmusic playing",
   "cloudmusic.help.playing.all": "View the list of playing music /cloudmusic playing all",
   "cloudmusic.help.stop": "Stop playing /cloudmusic stop",
   "cloudmusic.help.continue": "Continue playing /cloudmusic continue",
-  "cloudmusic.help.up": "Previous /cloudmusic up",
-  "cloudmusic.help.down": "Next /cloudmusic down",
+  "cloudmusic.help.prev": "Previous /cloudmusic prev",
+  "cloudmusic.help.next": "Next /cloudmusic next",
   "cloudmusic.help.to": "Play skip to /cloudmusic to [musicIndex]",
   "cloudmusic.help.exit": "Exit playback (can't continue) /cloudmusic exit",
   "cloudmusic.help.reset": "Reload configuration /cloudmusic reset",
@@ -113,8 +113,8 @@
   "cloudmusic.options.unlike": "[Cancel Hearts]",
   "cloudmusic.options.subscribe": "[Subscribe]",
   "cloudmusic.options.unsubscribe": "[Unsubscribe]",
-  "cloudmusic.options.page.up": "[Previous]",
-  "cloudmusic.options.page.down": "[Next]",
+  "cloudmusic.options.page.prev": "[Previous]",
+  "cloudmusic.options.page.next": "[Next]",
   "cloudmusic.options.page.to": "[Jump to...]",
   "cloudmusic.exception.music.id": "§c§l can't find music, please check music id §c§l can't find music, please check music id",
   "cloudmusic.exception.album.id": "§C§l can't find the album, please check the album id. §C§l can't find the album, please check the album id.",
