--- a/src/main/resources/assets/cloudmusic/lang/zh_tw.json
+++ b/src/main/resources/assets/cloudmusic/lang/zh_tw.json
@@ -42,15 +42,15 @@
     "cloudmusic.help.login.qr": "二維碼登錄 /cloudmusic login qr",
     "cloudmusic.help.volume": "查看音量 /cloudmusic volume",
     "cloudmusic.help.volume.volume": "調整音量 (0-100) /cloudmusic volume [volume]",
-    "cloudmusic.help.page.up": "上一頁 /cloudmusic page up",
-    "cloudmusic.help.page.down": "下一頁 /cloudmusic page down",
+    "cloudmusic.help.page.prev": "上一頁 /cloudmusic page prev",
+    "cloudmusic.help.page.next": "下一頁 /cloudmusic page next",
     "cloudmusic.help.page.to": "跳轉至 /cloudmusic page to [page]",
     "cloudmusic.help.playing": "查看正在播放的音樂 /cloudmusic playing",
     "cloudmusic.help.playing.all": "查看正在播放的音樂列表 /cloudmusic playing all",
     "cloudmusic.help.stop": "暫停播放 /cloudmusic stop",
     "cloudmusic.help.continue": "繼續播放 /cloudmusic continue",
-    "cloudmusic.help.up": "上一首 /cloudmusic up",
-    "cloudmusic.help.down": "下一首 /cloudmusic down",
+    "cloudmusic.help.prev": "上一首 /cloudmusic prev",
+    "cloudmusic.help.next": "下一首 /cloudmusic next",
     "cloudmusic.help.to": "播放跳轉至 /cloudmusic to [音樂索引編號]",
     "cloudmusic.help.exit": "退出播放 (無法繼續播放) /cloudmusic exit",
     "cloudmusic.help.reset": "重載配置 /cloudmusic reset",
@@ -113,8 +113,8 @@
     "cloudmusic.options.unlike": "[取消喜歡]",
     "cloudmusic.options.subscribe": "[收藏]",
     "cloudmusic.options.unsubscribe": "[取消收藏]",
-    "cloudmusic.options.page.up": "[上一頁]",
-    "cloudmusic.options.page.down": "[下一頁]",
+    "cloudmusic.options.page.prev": "[上一頁]",
+    "cloudmusic.options.page.next": "[下一頁]",
     "cloudmusic.options.page.to": "[跳轉至...]",
     "cloudmusic.exception.music.id": "§c§l找不到音樂, 請檢查音樂 id",
     "cloudmusic.exception.album.id": "§c§l找不到專輯, 請檢查專輯 id",
