--- a/src/main/resources/assets/cloudmusic/lang/zh_cn.json
+++ b/src/main/resources/assets/cloudmusic/lang/zh_cn.json
@@ -52,8 +52,8 @@
     "cloudmusic.help.volume": "查看音量 /cloudmusic volume",
     "cloudmusic.help.volume.volume": "调整音量 (0-100) /cloudmusic volume [volume]",
 
-    "cloudmusic.help.page.up": "上一页 /cloudmusic page up",
-    "cloudmusic.help.page.down": "下一页 /cloudmusic page down",
+    "cloudmusic.help.page.prev": "上一页 /cloudmusic page prev",
+    "cloudmusic.help.page.next": "下一页 /cloudmusic page next",
     "cloudmusic.help.page.to": "跳转至 /cloudmusic page to [page]",
 
     "cloudmusic.help.playing": "查看正在播放的音乐 /cloudmusic playing",
@@ -65,8 +65,8 @@
 
     "cloudmusic.help.stop": "暂停播放 /cloudmusic stop",
     "cloudmusic.help.continue": "继续播放 /cloudmusic continue",
-    "cloudmusic.help.up": "上一首 /cloudmusic up",
-    "cloudmusic.help.down": "下一首 /cloudmusic down",
+    "cloudmusic.help.prev": "上一首 /cloudmusic prev",
+    "cloudmusic.help.next": "下一首 /cloudmusic next",
     "cloudmusic.help.to": "播放跳转至 /cloudmusic to [musicIndex]",
     "cloudmusic.help.exit": "退出播放 (无法继续播放) /cloudmusic exit",
     "cloudmusic.help.reset": "重载配置 /cloudmusic reset",
@@ -137,8 +137,8 @@
     "cloudmusic.options.unlike": "[取消红心]",
     "cloudmusic.options.subscribe": "[收藏]",
     "cloudmusic.options.unsubscribe": "[取消收藏]",
-    "cloudmusic.options.page.up": "[上一页]",
-    "cloudmusic.options.page.down": "[下一页]",
+    "cloudmusic.options.page.prev": "[上一页]",
+    "cloudmusic.options.page.next": "[下一页]",
     "cloudmusic.options.page.to": "[跳转至...]",
 
     "cloudmusic.exception.music.id": "§c§l找不到音乐, 请检查音乐 id",
